--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,14 @@
+tora (2.0.0-1) experimental; urgency=low
+
+  * New upstream version for KDE4/Qt4.
+  * Added watch file.
+  * Updated to standards version 3.8.0, no additional changes needed.
+  * No longer need texinfo to build, the html files are part of the tarball.
+  * Streamlined build dependencies.
+  * Updated copyright file.
+
+ -- Michael Meskes <meskes@debian.org>  Sat, 03 Jan 2009 20:51:13 +0100
+
 tora (1.3.23-1) unstable; urgency=low
 
   * New upstream version
