--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+tora (2.0.0-2) experimental; urgency=low
+
+  * Added build dependency on libpq-dev to get full PostgreSQL support.
+
+ -- Michael Meskes <meskes@debian.org>  Tue, 06 Jan 2009 08:49:43 +0100
+
 tora (2.0.0-1) experimental; urgency=low
 
   * New upstream version for KDE4/Qt4.
