--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,7 @@
 tora (2.0.0-3) UNRELEASED; urgency=low
 
   * Cleaned up packaging a little bit.
+  * Added homepage information to control file.
 
  -- Michael Meskes <meskes@debian.org>  Sat, 07 Feb 2009 18:59:01 +0100
 
