--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+tora (2.1.0-1) unstable; urgency=low
+
+  * New upstream version.
+  * Bumped Standards-Version to 3.8.3, no changes needed.
+
+ -- Michael Meskes <meskes@debian.org>  Wed, 09 Sep 2009 11:40:40 +0200
+
 tora (2.0.0-4) unstable; urgency=low
 
   * Added patch to add missing include directives, closes: #526166
