Removed dh_desktop that has no functionality anymore.

--- a/debian/changelog
+++ b/debian/changelog
@@ -4,8 +4,9 @@ tora (2.1.0-1) unstable; urgency=low
   * Bumped Standards-Version to 3.8.3, no changes needed.
   * New project homepage.
   * Removed no longer needed 01_missing_includes.dpatch.
+  * Removed no longer used dh_desktop call.
 
- -- Michael Meskes <meskes@debian.org>  Wed, 09 Sep 2009 11:50:20 +0200
+ -- Michael Meskes <meskes@debian.org>  Thu, 10 Sep 2009 18:24:33 +0200
 
 tora (2.0.0-4) unstable; urgency=low
 
