--- a/debian/changelog
+++ b/debian/changelog
@@ -2,6 +2,16 @@ tora (2.1.2-1) unstable; urgency=low
 
   * Added debug package. (Closes: #560064)
   * New Upstream version 2.1.2
+    * Improved: Add editor option for uppler/lowercase object names
+    * Improved: Db extract/compare tool now remembers widgets states
+    * New: Filesystem completer for target line edit
+    * Improved: Compatibility with sql+
+    * New: Color/pixmap identifier for connection
+    * Improved: Schema browser improvements
+    * New: Ability to add external static check
+    * New: Save package specification and body to one file
+    * New: Initial support for creating/modifying tables
+    * Bugfixes
   * Bumped Standards-Version to 3.8.4, no changes needed.
 
  -- Michael Meskes <meskes@debian.org>  Tue, 30 Mar 2010 13:14:16 +0200
