--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+tora (2.1.3-2) unstable; urgency=low
+
+  * Fix FTBFS with gcc 4.7 by fixing missing <unistd.h> includes.
+    Thanks to Cyril Brulebois <kibi@debian.org> (Closes: #667395)
+
+ -- Michael Meskes <meskes@debian.org>  Wed, 09 May 2012 09:49:57 +0200
+
 tora (2.1.3-1) unstable; urgency=low
 
   * New Upstream version 2.1.3
